--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,15 +9,16 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_pokemon"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="600dp"
         android:background="#fffcdc"
-        android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.52"
-        tools:listitem="@layout/pokemon_item" />
+        tools:listitem="@layout/pokemon_item"
+        android:paddingLeft="15dp"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
